[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/KnockHud.gd" type="Script" id=1]
[ext_resource path="res://ui/KnockInput.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/theme.theme" type="Theme" id=3]

[node name="KnockHud" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="KnockInput" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = 376.0
margin_top = 211.0
margin_right = 753.0
margin_bottom = 342.0
text = "[Knocked Text Here]"

[node name="LetterTimeoutProgress" type="ProgressBar" parent="."]
margin_left = 142.0
margin_top = 65.0
margin_right = 441.0
margin_bottom = 140.0
percent_visible = false

[node name="Label" type="Label" parent="LetterTimeoutProgress"]
margin_left = 46.0
margin_top = 21.0
margin_right = 125.0
margin_bottom = 35.0
text = "LABEL_LETTER_TIMER"

[node name="WordTimeoutProgress" type="ProgressBar" parent="."]
margin_left = 563.0
margin_top = 62.0
margin_right = 893.0
margin_bottom = 140.0
percent_visible = false

[node name="Label" type="Label" parent="WordTimeoutProgress"]
margin_left = 55.0
margin_top = 26.0
margin_right = 130.0
margin_bottom = 40.0
text = "LABEL_WORD_TIMER"

[node name="CheatSheet" type="Label" parent="."]
margin_left = 126.0
margin_top = 279.0
margin_right = 198.0
margin_bottom = 361.0
text = "Cheatsheet
---------------
A    B    C/K D    E
F    G    H    I     J
L    M    N   O    P
Q    R    S    T    U
V    W    X    Y    Z"

[connection signal="phrase_changed" from="KnockInput" to="." method="_on_KnockInput_phrase_changed"]
